# fastapi_base

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: api.py  example.py
app/core/: __init__.py  config.py  events.py
app/core/fastapi_motor/: __init__.py
app/db/: events.py
app/models/: events.py
app/models/domain/: __init__.py  base_model.py  example.py
app/models/schemas/: __init__.py  example.py
scripts/: lint.sh
