[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["huihui <sunjiehuimail@foxmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_base"}]

[tool.poetry.dependencies]
python = "3.9.16"
fastapi = "^0.97.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
yapf = "^0.40.0"
mypy = "^1.3.0"
pyright = "^1.1.314"
databases = "^0.7.0"
uvicorn = "^0.22.0"
motor = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
